--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
-# macOS
+# Build output
+_site/
+dist/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# OS generated files
 .DS_Store
 .DS_Store?
 ._*
@@ -7,25 +22,25 @@
 ehthumbs.db
 Thumbs.db
 
-# VS Code
+# Editor files
 .vscode/
-*.code-workspace
-
-# Node modules (if you add any later)
-node_modules/
+.idea/
+*.swp
+*.swo
+*~
 
 # Logs
+logs/
 *.log
-npm-debug.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Temporary files
+*.tmp
+*.temp
 
-# Optional npm cache directory
-.npm
+# Cache
+.cache/
+.eleventy-cache/
 
-# Output of 'npm pack'
-*.tgz
+# Package manager lock files (optional - some prefer to commit these)
+# package-lock.json
+# yarn.lock
